# new-calcpaper

./: README.md  new-calcpaper.cabal
app/: Main.hs
sample/: config.yaml  newPaper.sh  template.tex
src/: Lib.hs
